TAG: mrkcoordload-6-0-25-4
TAG: mrkcoordload-6-0-25-3
TAG: mrkcoordload-6-0-25-2
TAG: mrkcoordload-6-0-25-1
DATE: 02/03/2025
STAFF: lec
CHANGES: 
wts2-1600/e4g-115/Marker Coordinate Load changes
loadadmin/prod/dailytasks.csh
	{MRKCOORDLOAD}/bin/mrkcoordload.sh
	{MRKCOORDLOAD}/bin/mrkcoordDelete.sh

TAG: mrkcoordload-6-0-22-4
DATE: 04/14/2023
STAFF: sc
CHANGES: FL2b PAR FL2-213/WTS2-1080

TAG: mrkcoordload-6-0-22-3
TAG: mrkcoordload-6-0-22-2
TAG: mrkcoordload-6-0-22-1
DATE: 09/26/2022
STAFF: sc
CHANGES: WTS2-988 - mrkcoordload: update load QC checks
1) add check for min rowcount of input file
2) remove allowing empty columns for delete format (bug from the delete/reload update)

TAG: mrkcoordload-6-0-17-1
DATE: 05/11/2021
STAFF: sc
CHANGES: TR13349 Build39

TAG: mrkcoordload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: mrkcoordload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: mrkcoordload-6-0-6-1
DATE: 11/08/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
_Marker_Status_key = 2 changed to _Marker_Status_key != 1

TAG: mrkcoordload-6-0-5-2
DATE: 09/01/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key not in (1,3) changed to = 2

TAG: mrkcoordload-6-0-5-1
DATE: 08/30/2016
STAFF: lec
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key in (1,3) changed to "= 1"

TAG: mrkcoordload-6-0-4-1
DATE: 04/27/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: mrkcoordload-6-0-3-2
DATE: 4/5/2016
STAFF: dbm
CHANGES:
1) Install: Remove use of /hobbiton mount

TAG: mrkcoordload-6-0-3-1
DATE: 03/07/2016
STAFF: lec 
CHANGES: TR12083/replace "vachar(30)" with "text"

TAG: mrkcoordload-6-0-1-1
DATE: 12/2/2015
STAFF: dbm 
CHANGES: TR11904 & TR12199
1) mrkcoordload.config.default: Remove MAIL_LOG_CUR setting
