@@ -1,3 +1,9 @@
+TAG: mrkcoordload-6-0-25-5
+DATE: 02/21/2025
+STAFF: lec
+CHANGES: 
+wts2-1600/e4g-154/Marker Coordinate Load changes : New coordinates
+
 TAG: mrkcoordload-6-0-25-4
 TAG: mrkcoordload-6-0-25-3
 TAG: mrkcoordload-6-0-25-2
